# api/rest/docs/swagger.json
@@ -890,6 +890,44 @@
                 }
             }
         },
+        "/dp/update/automation": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update demand partner automation.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DemandPartner"
+                ],
+                "parameters": [
+                    {
+                        "description": "DemandPartner",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DemandPartner"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/dpo/delete": {
             "delete": {
                 "security": [
